# scrubb-and-guard

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/: app-anonymization.py  app-pii-scrubber.py  app-setfit.py  app-zero-shot-simple.py  app-zero-shot.py
config/: deny_list.txt
data/: safe_words.txt
data/named_entities/: orte.txt
deploy/anonymization-api/: .dockerignore  Dockerfile  README.md  api.py  docker-compose.yml  requirements-api.txt
scripts/: evaluate_classifier_roc.py  expand_data_gemini.py
scrubb_guard/: __init__.py  anonymization_pipeline.py  data_generator.py  gen_synthetic_data.py  pii_scrubber.py  synthetic_data_generator.py  train_safety_model.py  train_setfit_model.py  zero_shot_classifier.py
