[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrubb-guard"
version = "0.1.0"
description = "A lightweight, on-device PII scrubbing tool for German text"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pii", "privacy", "scrubbing", "german", "anonymization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
train = [
    "pandas>=2.0",
    "numpy>=1.24",
    "datasets>=2.14",
    "transformers>=4.35",
    "torch>=2.0",
    "optimum[onnxruntime]>=1.13",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools]
packages = ["scrubb_guard"]

[tool.setuptools.package-data]
scrubb_guard = []

